# AI-Coding-Interview

./: README.md  main.py  problem_list.md  pyproject.toml
problems/cross_attention/: reference.py  solution.py  test.py
problems/ddpm/: pyproject.toml  reference.py  solution.py  test.py
problems/flash_attention/: pyproject.toml  reference.py  solution.py  test.py
problems/flow_matching/: pyproject.toml  reference.py  solution.py  test.py  train.py
problems/self_attention/: reference.py  solution.py  test.py
problems/transformer_block/: pyproject.toml  reference.py  solution.py  test.py  train.py
utils/: check.py
