[project]
name = "coding-interview"
version = "0.1.0"
description = "Mock interview coding problems — PyTorch algorithm implementations"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "pytest",
    "jupyter",
    "numpy",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["problems"]
python_files = ["test_*.py", "test.py"]
